--- a/CHP2.html
+++ b/CHP2.html
@@ -3,11 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Jumanji Movie 2017</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
+<nav>
+<ol>
+
+   <li><a href="plot">PLOT</a></li> 
+
+
+
+
+
+
+
+
+</ol>
+
+
+
+
+
+</nav>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
-
 
