--- a/CHP2.html
+++ b/CHP2.html
@@ -11,17 +11,26 @@
 <nav>
 <ol>
 
-   <li><a href="plot">PLOT</a></li> 
-
-
-
-
-
-
-
-
+   <li><a href="Plot">Plot</a></li> 
+   <li><a href="Crucial Information">Crucial Information</a></li> 
+   <li><a href="Characters">Characters</a></li> 
+   <li><a href="Crew & Actors">Crew & Actors</a></li> 
+   <li><a href="Reviews">Reviews</a></li> <br><br><br>
 </ol>
 
+<Header>
+<h1>Jumanji Movie 2017 (Netflix)</h1>
+<p>A group of young people get trapped inside a video game during the intense adventure Jumanji.<br>
+Turning into Characters they have choosen, The group faces challanges, answers riddles, and<br> traverses 
+perilous sites. Working together, So They can Defeat the game. escape this dangerous<br> world,
+and returns to reality before time runs out, as all of them only have three. </p>
+
+<a href="https://www.netflix.com/ae-en/title/80192646" target="_blank" class="netflix.">Watch on Netflix</a>
+
+
+
+
+</Header>
 
 
 
