--- a/CHP2.html
+++ b/CHP2.html
@@ -9,6 +9,7 @@
 <body>
     
 <nav>
+
 <ol>
 
    <li><a href="Plot">Plot</a></li> 
@@ -17,6 +18,8 @@
    <li><a href="Crew & Actors">Crew & Actors</a></li> 
    <li><a href="Reviews">Reviews</a></li> <br><br><br>
 </ol>
+
+</nav>
 
 
 
@@ -37,14 +40,33 @@ and returns to reality before time runs out, as all of them only have three. </p
 </Header>
 
 
+
+
 <section id="Plot">
+
     <h2>Plot</h2>
+    <p>A group of teens finds an outdated video game system and are practically transformed <br>
+        into the characters they have choosen, immersing them in the jungle environment of game.<br>
+         In order to finish the game and get back to reality, they must undertake the most dangerous<br>
+          journey of their life.</p>
+
+
+</section>
+
+
+
+<section id="Crucial Information">
+
+    <h2>Crucial Information</h2>
+
+    <p><strong>Release Year:</strong>2017</p>
+    <p><strong>Release Year:</strong>2017</p>
+    <p><strong>Release Year:</strong>2017</p>
 
 
 
 </section>
 
-</nav>
 
 
 </body>
