--- a/CHP2.html
+++ b/CHP2.html
@@ -37,7 +37,7 @@ and returns to reality before time runs out, as all of them only have three. </p
 <a href="https://www.netflix.com/ae-en/title/80192646" target="_blank" class="netflix.">Watch on Netflix</a>
 
 
-</Header>
+</Header><br>
 
 
 
@@ -51,22 +51,37 @@ and returns to reality before time runs out, as all of them only have three. </p
           journey of their life.</p>
 
 
-</section>
+</section><br>
+
+
 
 
 
 <section id="Crucial Information">
 
+
     <h2>Crucial Information</h2>
 
-    <p><strong>Release Year:</strong>2017</p>
-    <p><strong>Release Year:</strong>2017</p>
-    <p><strong>Release Year:</strong>2017</p>
+    <p><strong>Release Year:</strong> 2017</p>
+    <p><strong>Genre:</strong> Comedy, Adventure, Fanasy.</p>
+    <p><strong>Directed by:</strong> Jake Kasdan<p><br>
 
 
 
 </section>
 
+
+
+
+<section id="Crew & Actors">
+
+    <h2>Crew & Actors</h2>
+
+<p><strong>Actors:</strong> Kevin Hart, Jack Black, Dwayne Johnson, Karen Gillan</p>
+<p><strong>Crew:</strong> Chris McKenna, Erik Sommers, Scott Rosenberg, Jeff Pinkner</p>
+
+
+</section>
 
 
 </body>
