--- a/CHP2.html
+++ b/CHP2.html
@@ -12,11 +12,11 @@
 
 <ol>
 
-   <li><a href="Plot">Plot</a></li> 
-   <li><a href="Crucial Information">Crucial Information</a></li> 
-   <li><a href="Characters">Characters</a></li> 
-   <li><a href="Crew & Actors">Crew & Actors</a></li> 
-   <li><a href="Reviews">Reviews</a></li> <br><br><br>
+   <li><a href="#Plot">Plot</a></li> 
+   <li><a href="#Crucial Information">Crucial Information</a></li> 
+   <li><a href="#Characters">Characters</a></li> 
+   <li><a href="#Crew & Actors">Crew & Actors</a></li> 
+   <li><a href="#Reviews">Reviews</a></li> <br><br><br>
 </ol>
 
 </nav>
@@ -24,7 +24,7 @@
 
 
 
-<Header>
+<header>
 
 
 <h1>Jumanji Movie 2017 (Netflix)</h1>
@@ -37,7 +37,7 @@ and returns to reality before time runs out, as all of them only have three. </p
 <a href="https://www.netflix.com/ae-en/title/80192646" target="_blank" class="netflix.">Watch on Netflix</a>
 
 
-</Header><br>
+</header><br>
 
 
 
