--- a/CHP2.html
+++ b/CHP2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jumanji Movie 2017</title>
+    <title>Jumanji: Welcome to the jungle 2017</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -26,6 +26,7 @@
 
 <header>
 
+<div class="overlay">
 
 <h1>Jumanji Movie 2017 (Netflix)</h1>
 <p>A group of young people get trapped inside a video game during the intense adventure Jumanji.<br>
@@ -34,8 +35,9 @@ perilous sites. Working together, So They can Defeat the game. escape this dange
 and returns to reality before time runs out, as all of them only have three. </p>
 
 
-<a href="https://www.netflix.com/ae-en/title/80192646" target="_blank" class="netflix.">Watch on Netflix</a>
+<a href="https://www.netflix.com/ae-en/title/80192646" target="_blank" class="btn">Watch on Netflix</a>
 
+</div>
 
 </header><br>
 
