--- a/CHP2.html
+++ b/CHP2.html
@@ -16,7 +16,7 @@
    <li><a href="#Crucial Information">Crucial Information</a></li> 
    <li><a href="#Characters">Characters</a></li> 
    <li><a href="#Crew & Actors">Crew & Actors</a></li> 
-   <li><a href="#Reviews">Reviews</a></li> <br><br><br>
+   <li><a href="#Reviews">Reviews</a></li> 
 </ol>
 
 </nav>
@@ -29,9 +29,9 @@
 <div class="overlay">
 
 <h1>Jumanji Movie 2017 (Netflix)</h1>
-<p>A group of young people get trapped inside a video game during the intense adventure Jumanji.<br>
-Turning into Characters they have choosen, The group faces challanges, answers riddles, and<br> traverses 
-perilous sites. Working together, So They can Defeat the game. escape this dangerous<br> world,
+<p>A group of young people get trapped inside a video game during the intense adventure Jumanji.
+Turning into Characters they have choosen, The group faces challanges, answers riddles, and traverses 
+perilous sites. Working together, So They can Defeat the game. escape this dangerous world,
 and returns to reality before time runs out, as all of them only have three. </p>
 
 
@@ -39,7 +39,7 @@ and returns to reality before time runs out, as all of them only have three. </p
 
 </div>
 
-</header><br>
+</header>
 
 
 
@@ -47,9 +47,9 @@ and returns to reality before time runs out, as all of them only have three. </p
 <section id="Plot">
 
     <h2>Plot</h2>
-    <p>A group of teens finds an outdated video game system and are practically transformed <br>
-        into the characters they have choosen, immersing them in the jungle environment of game.<br>
-         In order to finish the game and get back to reality, they must undertake the most dangerous<br>
+    <p>A group of teens finds an outdated video game system and are practically transformed 
+        into the characters they have choosen, immersing them in the jungle environment of game.
+         In order to finish the game and get back to reality, they must undertake the most dangerous
           journey of their life.</p>
 
 
@@ -109,7 +109,7 @@ and returns to reality before time runs out, as all of them only have three. </p
     <h2>Reviews</h2>
     
     <p>Jumanji: Welcome to the Jungle was praised for great action sequences, 
-        a comedy flourish,<br> and strong performances all around. The critics were pleased
+        a comedy flourish, and strong performances all around. The critics were pleased
          with the fresh take on the classic Jumanji story.</p>
 
     
